subida notebook limpio

--- a/extraccion.ipynb
+++ b/extraccion.ipynb
@@ -232,48 +232,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Factura_124\n",
-      "Factura_124.pkl\n"
-     ]
-    }
-   ],
-   "source": [
-    "path = \"./training/factura_124.pdf\"\n",
-    "name = \"Factura_124\"\n",
-    "factura = ft_readinvoice(path, name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: {0: \"        L...u..n..e..s.. .a.. .s..á..b..a..d..o..,. .d..e.. .8.. .a.. .2..2.. .h..o..r.a..s.......................... \\nContratación Productos y Servicios  XXXXXXX  \\nReclamaciones  e incidencias    023  \\n \\nBAHNHOFQUAI, 12, 4600 - Olten (Suiza)  \\nSi quiere  una atención  más personalizada  puede  acudir  a alguno  de los centros  que ALPIQ TRADING AG tiene  a su  \\nservicio. Encuentre el más cercano en /centros o desde su móvil en  /.mobi.  2..4.. .h..o...r.a..s.. ./. .3..6..5.. .d..í.a..s.. .d..e..l. .a..ñ..o................................... \\nWeb     \\nReparación  urgente  de calderas  \\ny electrodomésticos  XXX XXX XXX  \\nLectura  del contador  XXX  XXX XXX  \\n/lecturas  \\nAverías  eléctricas  061   \\n \\n \\n  ALPIQ TRADING AG  \\n Fecha  de emisión:  10.09.2011   \\nNº factura:  T9396049062  \\nNombre:  ROBINSON SÁNCHEZ VELA  \\nDirección  suministro:  Calle del Arquitecto Sánchez Arcas  \\n09217 Condado de Treviño  \\nNº Referencia:  650856284802/3925  \\nNº cliente:  XXXXXXX  \\nNIF: 45498212A  \\nDirección:  Calle del Arquitecto Sánchez Arcas 09217 Condado de \\nTreviño  \\nEntidad:  Novo Banco, S.A., Sucursal en España  \\nDatos bancarios:  IBAN ES01311404997054516*****  \\n Fecha  de cargo:  13.09.2011  ROBINSON SÁNCHEZ VELA  \\nCalle del Arquitecto Sánchez Arcas  \\n09217  - Condado de Treviño  -  \\nBurgos  \\nEsta factura  será cargada  en cuenta  siguiendo  el mandato  E30832497109389682163779336  \\n¿Son  correctos  sus datos  personales?  \\nPuede  actualizarlos  online  en su Área  Privada  de la web entrando  en /misdatos  \\n244,35  € Total  a pagar  \\nelectricidad  PVPC sin discriminación horaria   Contrato: 9748 76118960 ....... ............ ............ ............ ..........  \\nDel 09.08.2011  al 08.09.2011  (30 días = 1,000000  meses)  \\nConsumo  electricidad  \\n    Período  de 09.08.2011  a 08.09.2011  \\n \\nTérmino  de potencia  (2,863  kW) \\n    Período  de 09.08.2011  a 08.09.2011  622 kWh  \\n \\n \\n30 días 0,292466  €/kWh  \\n \\n0,113029  €/kW día  181,91  € \\n \\n9,70 € \\nSubtotal  \\nImpuesto  electricidad  \\nOtros conceptos electricidad  \\n        Alquiler  de contador  \\nTotal  electricidad  \\n Base  imponible  \\nIGIC  21% \\nBase imponible   \\nIGIC  21% \\nTotal  factura  191,61  € 5,1127 %  9,80 € \\n30 días 0,017753  €/día  0,53 € \\n                                                                          201,94  € \\n201,41  € \\n42,30  € \\n0,53 € \\n0,11 € \\n244,35  € \\nIdeas que facilitan su día a día ......... ............ ............ ............ ............ ......  \\n¿Conoce  ya nuestro  servicio  de reparación  y mantenimiento  de calderas?  Con Servigas  contará  con asistencia  ante cualquier  avería  en \\nmenos  de 3 horas, las  24 horas del  día, los  365 días del  año y  tendrá garantizada  la revisión  anual de su  caldera o  calentador.  \\nConsulte  las condiciones  de este servicio  y contrate  Servigas  entrando  en  y obtendrá   un 50% de descuento  durante  el primer  año. \\nCanales para contactar con ALPIQ TRADING AG  \\nDese  de alta gratis  en /mifactura  ALPIQ TRADING AG. Dom. Social: BAHNHOFQUAI, 12, 4600 - Olten (Suiza). Olten (Suiza), tomo 44010, folio 41, sección 8, hoja número M -154684, inscripción 148. CIF 758'297 . \\n  \\n  \\n                                                                                        191,61  €   \",\n",
-       "  1: 'Las cuentas claras ......... ............ ............ ............ ............ ............ .............  \\nA continuación  le presentamos  información  detallada  sobre  su/s contrato/s  y factura.  \\nElectricidad  \\nNº contrato de acceso  \\n(ARAGONESA DE ACTIVIDADES ENERGETICAS, S.A. ): 974876118960  \\nFecha  final de contrato:  08.09.2011  \\nDatos  instalación  electricidad  \\nPotencia  contratada:  2,863  kW \\nTarifa de acceso:  2.0A  \\nCuantía Peaje:1 XX,XX € \\nCódigo  CUPS:  ES7116083885946638DTWW  \\n Información  lecturas  / consumos  \\nLectura  actual:  \\nLectura anterior:  \\nConsumo:  Llano real  \\nLlano real  \\nLlano  08.09.2011  \\n09.08.2011  99793  kWh \\n99171  kWh \\n622 kWh \\nLos costes  de energía  que se le aplican  se determinan  en el BOE  de \\nfecha 26.12.20 XX. Servicio: 97,337%, Permanentes: 0,150%,  \\nDiversificación  y Seguridad  de abastecimiento:  2,513%.  \\nSe aplica el precio del alquil er según BOE N 185 de 03.08.20XX . \\nComposición del término de energía: precio fijo (0,0 XXXXX  euros/kWh y  \\n0,0XXXXX  euros/kWh),  peaje  acceso¹  (0,0XXXXX  euros/kWh)  y otros  \\ncostes  regulados¹  (0,0XXXX  euros/kWh  y 0,0XXXXX  euros/kWh).  \\nElectricidad  \\nConsumo periodo 1 real  \\nConsumo  periodo  2 real Consumo  periodo  1 estimado  \\nConsumo  periodo  2 estimado  \\n1800  \\n1600  \\n1400  \\n1200  \\n1000  \\n800 \\n600 \\n400 \\n200 \\n0 \\n1 Importe que la compañía comercializadora debe pagar a la compañía distribuidora correspondiente a la facturación de acceso a su red, de acuerdo  \\ncon el tipo de peaje  aplicable  de conformidad  con el Real Decreto  1164/20 XX de 26 de octubre  para energía  eléctrica  y Real Decreto  949/2001  de 3 \\nde  agosto  para gas natural.  \\nSi desea  información  detallada  sobre  su/s contrato/s  e histórico  de consumo,  entre  en su Área  Privada  en /areaprivada.  \\nInformación de interés ........ ............ ............ ............ ............ ............ ........  Ene. X \\nFeb. X\\nMar.X  \\nAbr.X\\nMay.X  \\nJun.X  \\nJul.X  \\nAgo.X\\nSep.X  \\nOct.X  \\nNov.X\\nDic.X  \\nEne.X\\nFeb.X  \\nMar.X\\nAbr.X  \\nMay.X\\nJun.X  \\nJul.X  \\nAgo.X\\nSep.X  \\nOct.X  \\nNov.X\\nDic.X    \\n  \\n         ',\n",
-       "  2: 'Destino del importe de la factura ......... ............ ............ ............ ............ .. \\nEl destino  del importe  de su  factura,  244,35  euros,  es el siguiente:  \\nCoste  de producción  de electricidad  \\nXX,XX € Impuestos  aplicados  \\nCostes  regulados  \\nXX,XX € Incentivos  a las energías  renovables,  cogeneración  y residuos  \\nXX,XX € Coste  de redes  de distribución  y transporte  \\nXX,XX € Otros costes regulados  (incluida  \\nla anualidad  del déficit)  \\nXX,XX € \\nX,XX € \\nA los  importes  indicados en  el diagrama debe  añadirse,  en su  caso,  el alquiler  de los equipos  de medida y  control  u otros  conceptos.   \\n \\n  '}}"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "factura"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -369,48 +327,6 @@
     "        pickle.dump(clean_invoices, file)\n",
     "    \n",
     "    return clean_invoices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Factura_124\n"
-     ]
-    }
-   ],
-   "source": [
-    "path = \"./training/factura_124.pdf\"\n",
-    "name = \"Factura_124\"\n",
-    "factura = ft_readinvoice(path, name)\n",
-    "factura_limpia = ft_normalize(name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: \"l...u..n..e..s.. .a.. .s..a..b..a..d..o..,. .d..e.. .8.. .a.. .2..2.. .h..o..r.a..s.......................... contratacion productos y servicios xxxxxxx reclamaciones e incidencias 023 bahnhofquai, 12, 4600 olten suiza si quiere una atencion mas personalizada puede acudir a alguno de los centros que alpiq trading ag tiene a su servicio. encuentre el mas cercano en /centros o desde su movil en /.mobi. 2..4.. .h..o...r.a..s.. ./. .3..6..5.. .d..i.a..s.. .d..e..l. .a..n..o................................... web reparacion urgente de calderas y electrodomesticos xxx xxx xxx lectura del contador xxx xxx xxx /lecturas averias electricas 061 alpiq trading ag fecha de emision 10.09.2011 no factura t9396049062 nombre robinson sanchez vela direccion suministro calle del arquitecto sanchez arcas 09217 condado de trevino no referencia 650856284802/3925 no cliente xxxxxxx nif 45498212a direccion calle del arquitecto sanchez arcas 09217 condado de trevino entidad novo banco, s.a., sucursal en espana datos bancarios iban es01311404997054516 fecha de cargo 13.09.2011 robinson sanchez vela calle del arquitecto sanchez arcas 09217 condado de trevino burgos esta factura sera cargada en cuenta siguiendo el mandato e30832497109389682163779336 son correctos sus datos personales puede actualizarlos online en su area privada de la web entrando en /misdatos 244,35 total a pagar electricidad pvpc sin discriminacion horaria contrato 9748 76118960 ....... ............ ............ ............ .......... del 09.08.2011 al 08.09.2011 30 dias 1,000000 meses consumo electricidad periodo de 09.08.2011 a 08.09.2011 termino de potencia 2,863 kw periodo de 09.08.2011 a 08.09.2011 622 kwh 30 dias 0,292466 /kwh 0,113029 /kw dia 181,91 9,70 subtotal impuesto electricidad otros conceptos electricidad alquiler de contador total electricidad base imponible igic 21 base imponible igic 21 total factura 191,61 5,1127 9,80 30 dias 0,017753 /dia 0,53 201,94 201,41 42,30 0,53 0,11 244,35 ideas que facilitan su dia a dia ......... ............ ............ ............ ............ ...... conoce ya nuestro servicio de reparacion y mantenimiento de calderas con servigas contara con asistencia ante cualquier averia en menos de 3 horas, las 24 horas del dia, los 365 dias del ano y tendra garantizada la revision anual de su caldera o calentador. consulte las condiciones de este servicio y contrate servigas entrando en y obtendra un 50 de descuento durante el primer ano. canales para contactar con alpiq trading ag dese de alta gratis en /mifactura alpiq trading ag. dom. social bahnhofquai, 12, 4600 olten suiza. olten suiza, tomo 44010, folio 41, seccion 8, hoja numero m 154684, inscripcion 148. cif 758'297 . 191,61\",\n",
-       " 1: 'las cuentas claras ......... ............ ............ ............ ............ ............ ............. a continuacion le presentamos informacion detallada sobre su/s contrato/s y factura. electricidad no contrato de acceso aragonesa de actividades energeticas, s.a. 974876118960 fecha final de contrato 08.09.2011 datos instalacion electricidad potencia contratada 2,863 kw tarifa de acceso 2.0a cuantia peaje1 xx,xx codigo cups es7116083885946638dtww informacion lecturas / consumos lectura actual lectura anterior consumo llano real llano real llano 08.09.2011 09.08.2011 99793 kwh 99171 kwh 622 kwh los costes de energia que se le aplican se determinan en el boe de fecha 26.12.20 xx. servicio 97,337, permanentes 0,150, diversificacion y seguridad de abastecimiento 2,513. se aplica el precio del alquil er segun boe n 185 de 03.08.20xx . composicion del termino de energia precio fijo 0,0 xxxxx euros/kwh y 0,0xxxxx euros/kwh, peaje acceso1 0,0xxxxx euros/kwh y otros costes regulados1 0,0xxxx euros/kwh y 0,0xxxxx euros/kwh. electricidad consumo periodo 1 real consumo periodo 2 real consumo periodo 1 estimado consumo periodo 2 estimado 1800 1600 1400 1200 1000 800 600 400 200 0 1 importe que la compania comercializadora debe pagar a la compania distribuidora correspondiente a la facturacion de acceso a su red, de acuerdo con el tipo de peaje aplicable de conformidad con el real decreto 1164/20 xx de 26 de octubre para energia electrica y real decreto 949/2001 de 3 de agosto para gas natural. si desea informacion detallada sobre su/s contrato/s e historico de consumo, entre en su area privada en /areaprivada. informacion de interes ........ ............ ............ ............ ............ ............ ........ ene. x feb. x mar.x abr.x may.x jun.x jul.x ago.x sep.x oct.x nov.x dic.x ene.x feb.x mar.x abr.x may.x jun.x jul.x ago.x sep.x oct.x nov.x dic.x',\n",
-       " 2: 'destino del importe de la factura ......... ............ ............ ............ ............ .. el destino del importe de su factura, 244,35 euros, es el siguiente coste de produccion de electricidad xx,xx impuestos aplicados costes regulados xx,xx incentivos a las energias renovables, cogeneracion y residuos xx,xx coste de redes de distribucion y transporte xx,xx otros costes regulados incluida la anualidad del deficit xx,xx x,xx a los importes indicados en el diagrama debe anadirse, en su caso, el alquiler de los equipos de medida y control u otros conceptos.'}"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "factura_limpia"
    ]
   },
   {
@@ -1091,19 +1007,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = \"./training/factura_124.pdf\"\n",
-    "name = \"Factura_124\"\n",
-    "factura = ft_readinvoice(path, name)\n",
-    "factura_limpia = ft_normalize(name)\n",
-    "result = ft_font_code(factura_limpia, name)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 276,
    "metadata": {},
    "outputs": [],
@@ -1259,66 +1162,6 @@
     "            json.dump(result, archivo_json)\n",
     "    \n",
     "    return result\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 312,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: Formato de fecha incorrecto.\n"
-     ]
-    }
-   ],
-   "source": [
-    "path = \"./training/factura_124.pdf\"\n",
-    "name = \"Factura_124\"\n",
-    "factura = ft_readinvoice(path, name)\n",
-    "factura_limpia = ft_normalize(name)\n",
-    "result = ft_font_code(factura_limpia, name)\n",
-    "new_result = ft_solution(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 313,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'nombre_cliente': 'carmela dario gamboa',\n",
-       " 'dni_cliente': '24338786w',\n",
-       " 'calle_cliente': 'callede la virgen de africa',\n",
-       " 'cp_cliente': '09640',\n",
-       " 'población_cliente': 'hortiguela',\n",
-       " 'cif_comercializadora': 'b66277138',\n",
-       " 'nombre_comercializadora': '   unic global logistics, sl ',\n",
-       " 'dirección_comercializadora': '. c/ pompeu fabra, 13 2o despacho 10',\n",
-       " 'cp_comercializadora': '08242',\n",
-       " 'localidad_comercializadora': 'manresa',\n",
-       " 'número_factura': 'cj4228927656',\n",
-       " 'inicio_periodo': '07.11.2006',\n",
-       " 'fin_periodo': '09.09.2006',\n",
-       " 'fecha_cargo': '14 de September de 2006',\n",
-       " 'provincia_cliente': 'burgos',\n",
-       " 'importe_factura': '88,48',\n",
-       " 'consumo_periodo': 182,\n",
-       " 'potencia_contratada': '5,41',\n",
-       " 'provincia_comercializadora': 'Barcelona'}"
-      ]
-     },
-     "execution_count": 313,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_result"
    ]
   },
   {
@@ -1552,6 +1395,34 @@
    ],
    "source": [
     "new_result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Testeo**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = {}\n",
+    "fails = []\n",
+    "for i in range(0, 1000):\n",
+    "    try:\n",
+    "        path = f\"./test/factura_{i}.pdf\"\n",
+    "        name = f\"Factura_{i}\"\n",
+    "        factura = ft_readinvoice(path, name)\n",
+    "        factura_limpia = ft_normalize(name)\n",
+    "        result = ft_font_code(factura_limpia, name)\n",
+    "        new_result = ft_solution(result, name)\n",
+    "        result[f\"Factura_{i}\"] = new_result\n",
+    "    except:\n",
+    "        fails.append(f\"Factura_{i}\")"
    ]
   }
  ],
